// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@keen.io/charts <BarChart /> - utils generateHorizontalGroupedBars() should calculate bars and apply colors 1`] = `
Array [
  Object {
    "color": "red",
    "height": 66,
    "key": "0.sale",
    "selector": Array [
      0,
      "sale",
    ],
    "value": -3,
    "width": 0,
    "x": 10,
    "y": 147.5,
  },
  Object {
    "color": "red",
    "height": 66,
    "key": "1.sale",
    "selector": Array [
      1,
      "sale",
    ],
    "value": 12,
    "width": 380,
    "x": 10,
    "y": 15,
  },
  Object {
    "color": "green",
    "height": 66,
    "key": "0.buy",
    "selector": Array [
      0,
      "buy",
    ],
    "value": 11,
    "width": 354.6666666666667,
    "x": 10,
    "y": 213.5,
  },
  Object {
    "color": "green",
    "height": 66,
    "key": "1.buy",
    "selector": Array [
      1,
      "buy",
    ],
    "value": 3,
    "width": 152,
    "x": 10,
    "y": 81,
  },
]
`;

exports[`@keen.io/charts <BarChart /> - utils generateVerticalGroupedBars() should calculate bars and apply colors 1`] = `
Array [
  Object {
    "color": "red",
    "height": 0,
    "key": "0.sale",
    "selector": Array [
      0,
      "sale",
    ],
    "value": -3,
    "width": 80,
    "x": 10,
    "y": 380,
  },
  Object {
    "color": "red",
    "height": 168.18181818181822,
    "key": "1.sale",
    "selector": Array [
      1,
      "sale",
    ],
    "value": 12,
    "width": 80,
    "x": 250,
    "y": 211.81818181818178,
  },
  Object {
    "color": "blue",
    "height": 156.969696969697,
    "key": "0.buy",
    "selector": Array [
      0,
      "buy",
    ],
    "value": 11,
    "width": 80,
    "x": 90,
    "y": 223.030303030303,
  },
  Object {
    "color": "blue",
    "height": 67.27272727272731,
    "key": "1.buy",
    "selector": Array [
      1,
      "buy",
    ],
    "value": 3,
    "width": 80,
    "x": 330,
    "y": 312.7272727272727,
  },
  Object {
    "color": "green",
    "height": 370,
    "key": "0.revenue",
    "selector": Array [
      0,
      "revenue",
    ],
    "value": 30,
    "width": 80,
    "x": 170,
    "y": 10,
  },
  Object {
    "color": "green",
    "height": 269.0909090909091,
    "key": "1.revenue",
    "selector": Array [
      1,
      "revenue",
    ],
    "value": 21,
    "width": 80,
    "x": 410,
    "y": 110.9090909090909,
  },
]
`;
